Fixing "occasional horizontal scroll" bug

--- a/webapp/IdeaBroker/src/main/webapp/css/simple-sidebar.css
+++ b/webapp/IdeaBroker/src/main/webapp/css/simple-sidebar.css
@@ -82,8 +82,9 @@
 }
 
 .inset {
-    overflow:scroll;
+    overflow-y:scroll;
     padding: 20px;
+    height:100%;
 }
 
 @media (max-width:767px) {
